デザインの修正とバージョン番号更新

--- a/MyWorkDashboard.Shared/Components/TaskInputForm.razor
+++ b/MyWorkDashboard.Shared/Components/TaskInputForm.razor
@@ -18,7 +18,7 @@
         </Col>
         <Col Offset="1">
             <Popconfirm Placement="@Placement.Top" Title="削除してよろしいですか" OkText="削除する" CancelText="キャンセル" OnConfirm="OnDeleteButtonClick">
-                <Button Danger Type="@ButtonType.Primary">
+                <Button Danger Type="@ButtonType.Primary" Shape="@ButtonShape.Round">
                     削除
                 </Button>
             </Popconfirm>
