--- a/MyWorkDashboard.Shared/Components/SchedulingFrame.razor
+++ b/MyWorkDashboard.Shared/Components/SchedulingFrame.razor
@@ -51,7 +51,10 @@
     
     private RenderFragment GetBarPopupContent(DutyBar bar) =>
         @<div>
-            <p>@bar.Duty.Description</p>
+            @foreach (var line in bar.Duty.Description.Split('\n'))
+            {
+                @line<br/>
+            }
         </div>;
 
 }
