テキストを空白にしたときに実行時エラーとなる不具合を修正

--- a/MyWorkDashboard.Shared/Components/TaskInputForm.razor
+++ b/MyWorkDashboard.Shared/Components/TaskInputForm.razor
@@ -98,7 +98,7 @@
         {
             if (schedulingServive.SelectedDuty != null)
             {
-                schedulingServive.SelectedDuty.Title = value;
+                schedulingServive.SelectedDuty.Title = value + "";
                 schedulingServive.RaiseDutyPropertyChanged(this);
             }
         }
@@ -111,7 +111,7 @@
         {
             if (schedulingServive.SelectedDuty != null)
             {
-                schedulingServive.SelectedDuty.Description = value;
+                schedulingServive.SelectedDuty.Description = value + "";
                 StateHasChanged();
                 schedulingServive.RaiseDutyPropertyChanged(this);
             }
